k8s/db-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: project-draft-db
  labels:
    app: project-draft-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-draft-db
  template:
    metadata:
      labels:
        app: project-draft-db
    spec:
      containers:
        - name: project-draft-db
          image: postgres:latest
          ports:
            - containerPort: 5432
