k8s/frontend-deployment.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: project-frontend
#   labels:
#     app: project-frontend
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: project-frontend
#   template:
#     metadata:
#       labels:
#         app: project-frontend
#     spec:
#       containers:
#         - name: project-frontend
#           image: project-frontend:release
#           imagePullPolicy: Never
#           command: ["npm", "start"]
#           ports:
#             - containerPort: 3000  # or whatever port your dev server uses
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-frontend
  template:
    metadata:
      labels:
        app: project-frontend
    spec:
      containers:
        - name: project-frontend
          image: gcr.io/aman070902/project-frontend
          ports:
            - containerPort: 8080
