k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-backend-service
spec:
  selector:
    app: project-backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 8080
  type: LoadBalancer
