k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-draft-db
spec:
  selector:
    app: project-draft-db
  ports:
    - port: 5432
