k8s/frontend-service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: project-frontend
# spec:
#   selector:
#     app: project-frontend
#   ports:
#     - port: 3000
apiVersion: v1
kind: Service
metadata:
  name: project-frontend-service
spec:
  type: LoadBalancer
  selector:
    app: project-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
